--- a/inventory.ini
+++ b/inventory.ini
@@ -2,26 +2,26 @@
 #-----------------------------------------------------Start POSTGRES &  ETCD-------------------------------------------------------------------
 # etcd configuration
 [etcd_cluster]  # recommendation: 3 or 5-7 nodes
-192.168.0.25 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.24 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.23 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.27 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 
 # Postgres  configuration
 # if with_haproxy_load_balancing: true (in vars/main.yml)
 [balancers]
-192.168.0.25 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.24 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.23 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.27 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 
 # PostgreSQL nodes
 [master]
-192.168.0.25 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+192.168.0.23 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [replica]
-192.168.0.24 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
-192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+192.168.0.27 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [postgres_cluster:children]
 master
@@ -36,25 +36,26 @@ postgresql_databases="[{db: 'registry', encoding: 'en_US.UTF-8', lc_collate: 'en
 
 ; #-----------------------------------------------------START KAFKA & ZOOKEEPER-------------------------------------------------------------------
 [kafka-nodes]
-192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.13
-192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.11
-192.168.0.9 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.9
+192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.14
+192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.13
+192.168.0.5 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.5
 
 [kafka-nodes:vars]
-zookeeper_hosts="[192.168.0.13,192.168.0.11,192.168.0.9]"
+zookeeper_hosts="[192.168.0.14,192.168.0.13,192.168.0.5]"
 ; #-----------------------------------------------------END KAFKA & ZOOKEEPER-------------------------------------------------------------------
 
 ; #-----------------------------------------------------START KUBERNETES-------------------------------------------------------------------
 [kube_control_plane]
-192.168.0.23 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.23 ip=192.168.0.23 access_ip=192.168.0.23
+192.168.0.8 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.8 ip=192.168.0.8 access_ip=192.168.0.8
 
 
 [etcd]
-192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.12 ip=192.168.0.12 access_ip=192.168.0.12
+192.168.0.20 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.20 ip=192.168.0.20 access_ip=192.168.0.20
 
 [kube_node]
-192.168.0.4 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.4 ip=192.168.0.4 access_ip=192.168.0.4
-192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.12 ip=192.168.0.12 access_ip=192.168.0.12
+192.168.0.20 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.20 ip=192.168.0.20 access_ip=192.168.0.20
+192.168.0.30 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.30 ip=192.168.0.30 access_ip=192.168.0.30
+192.168.0.29 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.29 ip=192.168.0.29 access_ip=192.168.0.29
 
 [calico_rr]
 
@@ -72,22 +73,22 @@ calico_rr
 
 #-----------------------------------------------------START REDIS-------------------------------------------------------------------
 [redis-master]
-192.168.0.22 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.26 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 [redis-slave]
-192.168.0.29 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.25 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 [redis-slave:vars]
-master_node_ip="192.168.0.22"
+master_node_ip="192.168.0.26"
 #-----------------------------------------------------END REDIS-------------------------------------------------------------------
 
 #-----------------------------------------------------START DOCKER-REGISTRY-------------------------------------------------------------------
 [registry]
-192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
+192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
 #-----------------------------------------------------END DOCKER-REGISTRY-------------------------------------------------------------------
 
 ; #-----------------------------------------------------START CLICKHOUSE-------------------------------------------------------------------
-; [clickhouse_cluster]
-; 192.168.0.26 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+[clickhouse_cluster]
+192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 ; #-----------------------------------------------------END CLICKHOUSE-------------------------------------------------------------------
 
