--- a/kube-deployment-config/public-app-service.yml
+++ b/kube-deployment-config/public-app-service.yml
@@ -14,6 +14,7 @@ spec:
       port: 80
       protocol: TCP
       targetPort: 80
+      nodePort: 32000
   selector:
     k8s-app: public-app
   sessionAffinity: None
