--- a/kube-deployment-config/divoc-config.yaml
+++ b/kube-deployment-config/divoc-config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: divoc-config
-  namespace: divoc-qa
+  namespace: divoc
   selfLink: /api/v1/namespaces/divoc/configmaps/divoc-config
 data:
   DB_HOST: "192.168.0.27"
