--- a/kube-deployment-config/portal-api-deployment.yaml
+++ b/kube-deployment-config/portal-api-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         k8s-app: portal-api
     spec:
+      hostNetwork: true
       containers:
         - image: dockerhub/portal_api:1.24.0-generic
           imagePullPolicy: Always
