--- a/kube-deployment-config/test-certificate-signer-deployment.yaml
+++ b/kube-deployment-config/test-certificate-signer-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         k8s-app: test-certificate-signer
     spec:
+      hostNetwork: true
       containers:
         - image: dockerhub/test_certificate_signer:1.24.0-generic
           imagePullPolicy: Always
