--- a/kube-deployment-config/analytics-feed-hsp.yaml
+++ b/kube-deployment-config/analytics-feed-hsp.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: analytics-feed
-  namespace: divoc
+  namespace: divoc-qa
 spec:
   maxReplicas: 2
   minReplicas: 1
