--- a/kube-deployment-config/correct-certificate-signer-hsp.yaml
+++ b/kube-deployment-config/correct-certificate-signer-hsp.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: correct-certificate-signer
-  namespace: divoc
+  namespace: divoc-qa
 spec:
   maxReplicas: 1
   minReplicas: 1
