--- a/kube-deployment-config/ingress.yaml
+++ b/kube-deployment-config/ingress.yaml
@@ -1,8 +1,8 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: ingress-divoc
-  namespace: divoc
+  namespace: divoc-qa
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
@@ -10,58 +10,35 @@ spec:
     - http:
         paths:
           - path: /auth
-            pathType: Prefix
             backend:
-              service:
-                name: keycloak
-                port: 
-                  number: 8080
+              serviceName: keycloak
+              servicePort: 8080
           - path: /divoc
-            pathType: Prefix
             backend:
-              service:
-                name: vaccination-api
-                port: 
-                  number: 8000
+              serviceName: vaccination-api
+              servicePort: 8000
           - path: /divoc/api/citizen
-            pathType: Prefix
             backend:
-              service: 
-                name: registration-api
-                port: 
-                  number: 8002
+              serviceName: registration-api
+              servicePort: 8002
           - path: /divoc/admin
-            pathType: Prefix
             backend:
-              service: 
-                name: portal-api
-                port: 
-                  number: 8001
+              serviceName: portal-api
+              servicePort: 8001
           - path: /config
             pathType: Prefix
             backend:
-              service:
-                name: flagr
-                port: 
-                  number: 18000
+              serviceName: flagr
+              servicePort: 18000
           - path: /cert
-            pathType: Prefix
             backend:
-              service: 
-                name: digilocker-support-api
-                port: 
-                  number: 8003
+              serviceName: digilocker-support-api
+              servicePort: 8003
           - path: /certificate/api
-            pathType: Prefix
             backend:
-              service:
-                name: certificate-api
-                port: 
-                  number: 4321
+              serviceName: certificate-api
+              servicePort: 4321
           - path: /
-            pathType: Prefix
             backend:
-              service: 
-                name: public-app
-                port: 
-                  number: 80
+              serviceName: public-app
+              servicePort: 80
