--- a/kube-deployment-config/notification-service-hsp.yml
+++ b/kube-deployment-config/notification-service-hsp.yml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: notification-service
-  namespace: divoc
+  namespace: divoc-qa
 spec:
   maxReplicas: 5
   minReplicas: 1
