--- a/kube-deployment-config/public-app-deployment.yaml
+++ b/kube-deployment-config/public-app-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: divoc
+  namespace: divoc-qa
   labels:
     k8s-app: public-app
   name: public-app
