--- a/kube-deployment-config/public-app-service.yml
+++ b/kube-deployment-config/public-app-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: divoc
+  namespace: divoc-qa
   finalizers:
     - service.kubernetes.io/load-balancer-cleanup
   labels:
