--- a/kube-deployment-config/certificate-signer-hsp.yaml
+++ b/kube-deployment-config/certificate-signer-hsp.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: certificate-signer
-  namespace: divoc-qa
+  namespace: divoc
 spec:
   maxReplicas: 5
   minReplicas: 1
