--- a/kube-deployment-config/ingress.yaml
+++ b/kube-deployment-config/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-divoc
-  namespace: divoc-qa
+  namespace: divoc
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
