--- a/kube-deployment-config/registry-hsp.yml
+++ b/kube-deployment-config/registry-hsp.yml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: registry
-  namespace: divoc-qa
+  namespace: divoc
 spec:
   maxReplicas: 5
   minReplicas: 1
