--- a/kube-deployment-config/flagr-service.yaml
+++ b/kube-deployment-config/flagr-service.yaml
@@ -10,7 +10,8 @@ spec:
       port: 18000
       protocol: TCP
       targetPort: 18000
+      nodePort: 32000
   selector:
     k8s-app: flagr
   sessionAffinity: None
-  type: ClusterIP
+  type: NodePort
