--- a/kube-deployment-config/keycloak-service.yaml
+++ b/kube-deployment-config/keycloak-service.yaml
@@ -10,7 +10,8 @@ spec:
       port: 8080
       protocol: TCP
       targetPort: 8080
+      nodePort: 32080
   selector:
     k8s-app: keycloak
   sessionAffinity: None
-  type: ClusterIP
+  type: NodePort
