--- a/kube-deployment-config/portal-api-service.yaml
+++ b/kube-deployment-config/portal-api-service.yaml
@@ -10,7 +10,8 @@ spec:
       port: 8001
       protocol: TCP
       targetPort: 8001
+      nodePort: 32001
   selector:
     k8s-app: portal-api
   sessionAffinity: None
-  type: ClusterIP
+  type: NodePort
