--- a/inventory.ini
+++ b/inventory.ini
@@ -36,12 +36,10 @@ postgresql_databases="[{db: 'registry', encoding: 'en_US.UTF-8', lc_collate: 'en
 
 ; #-----------------------------------------------------START KAFKA & ZOOKEEPER-------------------------------------------------------------------
 [kafka-nodes]
-192.168.0.10 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.10
-192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.14
-192.168.0.5 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.5
+192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.13
 
 [kafka-nodes:vars]
-zookeeper_hosts="['192.168.0.10','192.168.0.14','192.168.0.12']"
+zookeeper_hosts="['192.168.0.13']"
 ; #-----------------------------------------------------END KAFKA & ZOOKEEPER-------------------------------------------------------------------
 
 ; #-----------------------------------------------------START KUBERNETES-------------------------------------------------------------------
