--- a/kube-deployment-config/keycloak-deployment.yaml
+++ b/kube-deployment-config/keycloak-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         k8s-app: keycloak
     spec:
       containers:
-        - image: REGISTRY/keycloak:1.24.0-generic
+        - image: REGISTRY/keycloak:latest
           imagePullPolicy: Always
           resources:
             requests:
