--- a/kube-deployment-config/notification-service-deployment.yaml
+++ b/kube-deployment-config/notification-service-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         k8s-app: notification-service
     spec:
       containers:
-        - image: REGISTRY/notification-service:1.24.0-generic
+        - image: REGISTRY/notification-service:latest
           imagePullPolicy: Always
           name: notification-service
           envFrom:
