fixing install script

--- a/inventory.example.ini
+++ b/inventory.example.ini
@@ -54,12 +54,10 @@ zookeeper_hosts="['192.168.0.13']"
 192.168.0.29 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.29 ip=192.168.0.29 access_ip=192.168.0.29
 192.168.0.22 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.22 ip=192.168.0.22 access_ip=192.168.0.22
 
-[calico_rr]
 
 [k8s_cluster:children]
 kube_control_plane
 kube_node
-calico_rr
 
 #-----------------------------------------------------END KUBERNETES-------------------------------------------------------------------
 
@@ -80,7 +78,7 @@ master_node_ip="192.168.0.8"
 #-----------------------------------------------------END REDIS-------------------------------------------------------------------
 
 #-----------------------------------------------------START DOCKER-REGISTRY-------------------------------------------------------------------
-[registry]
+[docker_registry]
 192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
 #-----------------------------------------------------END DOCKER-REGISTRY-------------------------------------------------------------------
 
