--- a/ansible-cookbooks/docker-registry/playbook.yml
+++ b/ansible-cookbooks/docker-registry/playbook.yml
@@ -1,6 +1,6 @@
 ---
 - name: 'Install Private Docker registry'
-  hosts: registry
+  hosts: docker-registry
   become: true
   roles:
     - container-registry
